infrastructure/terraform/subnet.tf
resource "aws_subnet" "shopsphere_public_subnet" {
  vpc_id                  = aws_vpc.shopsphere_vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "ap-south-1a"
  map_public_ip_on_launch = true

  tags = {
    Name = "shopsphere-public-subnet"
  }
}
